--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,8 @@
 
   <body>
     <header>
-      <a href="/">Home</a>
+      <a href="main.handlebars">HOME</a>
+      <a href="/keplan/login.handlebars">LOGIN</a>
     </header>
 
     {{{body}}}
