--- a/keplan/login.handlebars
+++ b/keplan/login.handlebars
@@ -18,7 +18,7 @@
       cursor: pointer; font-size: 16px; } .login-container button:hover {
       background-color: #45a049; }
     </style>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="login.css" />
   </head>
   <body>
 
