--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,12 @@
 
   <body>
     <header>
+
+      <div class="Logo">
+        <a href="main.handlebars">
+          <img src="/public/uploads/Ikea_logo.svg.png" alt="Logo" /></a>
+      </div>
+
       <a href="main.handlebars">HOME</a>
       <a href="/keplan/login.handlebars">LOGIN</a>
     </header>
