--- a/views/impressum.handlebars
+++ b/views/impressum.handlebars
@@ -2,6 +2,8 @@
 
 <h2>Urheberrecht</h2>
 
+<h3>bitte es 6i</h3>
+
 <p>Die durch Maéva Huwyler und Silas Jaggi erstellten Inhalte und Werke auf diesen Webseiten unterliegen dem deutschen Urheberrecht. Sämtliche Beiträge Dritter sind als solche gekennzeichnet. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Kopien von diesen Seiten sind nur für den privaten Bereich gestattet, nicht jedoch für kommerzielle Zwecke.
 
 <h2>Datenschutz</h2>
