--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,14 @@
     <header>
 
       <div class="Logo">
-        <a href="main.handlebars">
-          <img src="/public/uploads/Ikea_logo.svg.png" alt="Logo" /></a>
+        <a href="/">
+          <img src="/uploads/Ikea_logo.svg.png" alt="Logo" width="80px" /></a>
       </div>
 
-      <a href="main.handlebars">HOME</a>
-      <a href="/keplan/login.handlebars">LOGIN</a>
+      <a href="/">HOME</a>
+      <a href="/login">LOGIN</a>
+      <a href="/register">REGISTER</a>
+
     </header>
 
     {{{body}}}
